--- a/aoai-python/openai-python-sample.ipynb
+++ b/aoai-python/openai-python-sample.ipynb
@@ -9,8 +9,14 @@
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "aoai-sample-01",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "name": "python",
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
