--- a/aoai-python/openai-python-sample.ipynb
+++ b/aoai-python/openai-python-sample.ipynb
@@ -50,6 +50,8 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "# Load environment variables from a .env file. If successful, print the Azure OpenAI API endpoint\n",
+    "\n",
+    "\n",
     "if load_dotenv():\n",
     "    print(\"Azure OpenAI API Base: \" + os.getenv(\"AZURE_OPENAI_ENDPOINT\"))\n",
     "else: \n",
@@ -169,15 +171,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Response: Why did the tomato turn red? Because it saw the salad dressing!\n",
-      "CompletionUsage(completion_tokens=14, prompt_tokens=13, total_tokens=27)\n"
+      "Response: What's the difference between a poorly dressed man on a trampoline and a well-dressed man on a trampoline? \n",
+      "\n",
+      "Attire.\n",
+      "CompletionUsage(completion_tokens=28, prompt_tokens=13, total_tokens=41)\n"
      ]
     }
    ],
@@ -216,24 +220,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found Azure OpenAI Endpoint: https://cog-ilecskbcfhj6i.openai.azure.com/\n",
+      "Azure OpenAI API Base: https://cog-ilecskbcfhj6i.openai.azure.com/\n",
       "AZURE_OPENAI_COMPLETION_DEPLOYMENT_NAME: turbochatmodel\n",
-      "Once upon a time, there was a little girl named Lily who lived in a small village. She loved to spend her days exploring the nearby forest, where she would often encounter all sorts of animals, from squirrels to rabbits to deer.\n",
+      "Once upon a time, there was a little girl named Lily who lived in a small village at the edge of a forest. One day, as she was playing in the forest, she stumbled upon a magical flower. The flower was glowing in a beautiful shade of blue and when Lily picked it up, she felt a strange sensation coursing through her body.\n",
       "\n",
-      "One day, while wandering through the forest, Lily heard a strange noise coming from a nearby bush. Curious, she cautiously approached the bush and peeked inside. To her surprise, she found a tiny, injured bird lying on the ground.\n",
+      "As she made her way back home, she noticed that the people in her village were acting out of character. They were angry, short-tempered and seemed to be on the brink of a fight. Lily knew that something was wrong and decided to investigate.\n",
       "\n",
-      "Feeling sorry for the poor bird, Lily decided to take it home and nurse it back to health. She spent the next few days caring for the bird, feeding it, and keeping it warm until it was strong enough to fly away on its own.\n",
+      "She made her way back to the forest and found a group of mischievous fairies who were causing all the trouble. They had cast a spell on the village, causing everyone to become irritable and angry. Lily knew that she had to do something to stop the fairies.\n",
       "\n",
-      "As the days passed, Lily continued to explore the forest, but now she did so with a renewed sense of wonder and appreciation for all the creatures that lived there. And whenever she encountered an injured or lost animal, she knew just what to do to help it.\n",
+      "With the magical flower in her hand, she confronted the fairies and demanded that they remove the spell. At first, the fairies refused and threatened to cast a spell on Lily too, but she stood her ground and refused to back down.\n",
       "\n",
-      "From that day on, Lily became known as the village's very own animal whisperer, and she spent the rest of her days helping animals in need and exploring the wonders of the natural world.\n"
+      "Finally, the fairies relented and removed the spell. The village returned to its peaceful state and everyone was happy once again. From that day on, Lily was known as the hero of the village and was respected by all.\n"
      ]
     }
    ],
@@ -247,9 +251,10 @@
     "from dotenv import load_dotenv\n",
     "\n",
     "if load_dotenv():\n",
-    "    print(\"Found Azure OpenAI Endpoint: \" + os.getenv(\"AZURE_OPENAI_ENDPOINT\"))\n",
+    "    print(\"Azure OpenAI API Base: \" + os.getenv(\"AZURE_OPENAI_ENDPOINT\"))\n",
     "else: \n",
-    "    print(\"No file .env found\")\n",
+    "    # If the .env file could not be loaded, print a message indicating that the Azure OpenAI API endpoint was not found\n",
+    "    print(\"Azure OpenAI API Endpoint not found.\")\n",
     "\n",
     "## Create an instance of Azure OpenAI\n",
     "llm = AzureChatOpenAI(\n",
